[build-system]
requires = ["setuptools>=45", "wheel", "numpy", "Cython>=3.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "arsenal"
dynamic = ["version"]
description = "Arsenal of python utilities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Tim Vieira", email = "tim.f.vieira@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "gprof2dot",
    "graphviz",
    "rich",
    "path.py",
    "IPython",
    "tqdm",
    "psutil",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]
docs = [
    "sphinx",
    "sphinx-autodoc-typehints",
]

[tool.setuptools]
zip-safe = false  # Required for Cython packages
include-package-data = true

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["*"]

[tool.pytest.ini_options]
testpaths = ["tests", "arsenal"]
addopts = "--doctest-modules"

[tool.cython]
include = ["arsenal/**/*.pyx"]

[tool.ruff]
line-length = 90
indent-width = 4
target-version = "py310"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E731", "E701", "F401", "E741", "E743", "E702", "E402", "E401", "F403", "F722", "F811", "E711", "E722"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
